status/li/littlefs/0.3.1/macos/darwin-20.6.0/gnat=10.3.2/littlefs-0.3.1.yaml.log
Test ran at 2024-08-01 00:46:33.450361+00:00

SOLUTION:
littlefs=0.3.1: Ada/SPARK binding for the LittleFS flash embedded filesystem
Origin: commit d184aefe7ee3f987994b970b9da20f94185f1604 from https://github.com/Fabien-Chouteau/littlefs-ada.git
Properties:
   Author: Fabien Chouteau
   Config type: Assert : Boolean default: 'false'
   Config type: Debug : Boolean default: 'false'
   Config type: Error : Boolean default: 'false'
   Config type: Max_Attr_Size : Integer range 1 .. 1022 default: '1022'
   Config type: Max_File_Size : Integer range 1 .. 2147483647 default: '2147483647'
   Config type: Max_Name_Size : Integer range 1 .. 1022 default: '255'
   Config type: No_Malloc : Boolean default: 'true'
   Config type: Trace : Boolean default: 'false'
   Config type: Warn : Boolean default: 'false'
   Configuration: no modifiers
   Description: Ada/SPARK binding for the LittleFS flash embedded filesystem
   License: BSD-3-Clause
   Maintainer: Fabien Chouteau <chouteau@adacore.com>
   Maintainers_Logins: Fabien-Chouteau
   Name: littlefs
   Tag: embedded
   Tag: filesystem
   Tag: nostd
   Tag: flash
   Version: 0.3.1
   Website: https://github.com/Fabien-Chouteau/littlefs-ada


LOG:
Note: Deploying littlefs=0.3.1...
Note: Building littlefs/littlefs.gpr...
Setup
   [mkdir]        object directory for project Littlefs
   [mkdir]        library directory for project Littlefs
Compile
   [C]            lfs_util.c
   [C]            lfs.c
   [Ada]          littlefs_config.ads
   [Ada]          littlefs.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdint.h:61,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include/stdint.h:9,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs/lfs_util.h:23,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs/lfs_util.c:7:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdint.h:61,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include/stdint.h:9,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs/lfs.h:10,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs/lfs.c:7:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of lfs.c failed
   compilation of lfs_util.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/78b7365f-19ee-4284-8a92-2c87ffbe605c/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104e92000
Call stack traceback locations:
0x10579a415 0x10546de83 0x105680df9 0x105681581 0x1055e1ac3 0x1055dff99 0x1055fc873 0x105648dc1 0x10564781a 0x1055fc9b8 0x1055e0349 0x104ef19c1 0x104f02578 0x104f0701c 0x104f8d05c 0x104f983b8 0x104e93605 0x104e96914


Warning: littlefs=0.3.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
